# riftshadow

./: .clang-format  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Homestead.yaml.example  LICENSE  README.md  README.txt  Vagrantfile  after.sh  checkmud.pl  clang-format  composer.json  config.json  config.json.example  cspell.json  dev-install.sh  homestead.rb  killdead.pl  package-lock.json  permdeaths.txt  rift.sql  rift_core.sql  riftshadow.sln  riftshadow.vcxproj  riftshadow.vcxproj.filters  setup.sql  user-customizations.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: labeler.yml
.github/workflows/: cmake.yml  codeql-analysis.yml  db-verify.yml  labeler.yml  riftagent.yml  semgrep.yml  snyk-security.yml
admin/: .env.example  .gitignore  .php-cs-fixer.php  .phpcs.xml  artisan  composer.json  index.phtml  login.phtml  logout.phtml  package-lock.json  package.json  phpunit.xml  vite.config.js  webpack.mix.js
admin/class/: edit.phtml  index.phtml
admin/config/: app.php  auth.php  broadcasting.php  cache.php  database.php  excel.php  filesystems.php  flare.php  ignition.php  installer.php  logging.php  mail.php  queue.php  services.php  session.php
admin/help/: add.phtml  add_action.phtml  delete.phtml  edit.phtml
admin/public/: .htaccess  index.php  mix-manifest.json
admin/race/: edit.phtml  index.phtml  test.non
admin/routes/: api.php  web.php
admin/utils/: update_roomid.phtml
admin_old/: check_trust.inc  const.txt  header.inc  login.phtml  test.phtml
admin_old/help/: edit_action.phtml  search.phtml
admin_old/utils/: gen_col.phtml  update_areaid.phtml
archive/: README.md
area/: .devrep.pl.swp  .prog.lst.swp  abak.lst  abyssal.are  academy.are  adrianna.are  adventurer.are  aetudgroad.are  alsteatomb.are  anew.lst  antava.are  arangird.are  area.list  area.lst  area0.are  ashort.lst  asmall.lst  ban.txt  barrenhollows1.are  barrenhollows2.are  bluetwr.are  booboo.are  bounties.txt  bounty.are  brynnmahar.are  bugout.txt  caelumaedan.are  cantrev.are  canyon.are  carantoc.are  catacomb.are  caverns.are  cimar.are  cimcaverns.are  cimsewer.are  citems.txt  cohtram2.are  common.are  crimson.are  dagdan.are  (+106 more)
area/CVS/: Entries  Repository
area/backup/: adrianna.are  adrianna.are.bak  aetcimroad.are  arangird.are  arangird.are.bak  area0.are  barrenhollows1.are.bak  bounty.are.bak  carantoc.are  catacomb.are.bak  caverns.are  cetandet.are.bak  chasmtower.are.bak  cimar.are.bak  cimcaverns.are.bak  cimsewer.are  cimsewer.are.bak  cohtram2.are.bak  crimson.are  crimson.are.bak  dagdan.are.bak  dale.are  dale.are.bak  dragtower.are.bak  duergarmines.are.bak  dying.are.bak  eastroad.are.bak  eluvielshrine.are  eluvielshrine.are.bak  elvenstronghold.are.bak  emerald.are  emerald.are.bak  falldesert.are.bak  fallenkeep.are  flcont.are  forest.are  forgotten.are.bak  forgottentower.are  gehirkeep.are  gehirvalley.are.bak  (+63 more)
area/dump/: aetplaroad.are  brynnmahar.are  caelumaedan.are  canyon.are  dale.are  dragtower.are  duergarmines.are  dying.are  eastroad.are  eluvielshrine.are  emerald.are  greentwr.are  haon.are  hasturschool.are  hitower.are  horde.are  midgaard.are  mtcim.are  mudschool.are  mythforest.are  mythruins.are  naiadia.are  plains.are  rakshasa.are  regal.are  school.are  scionenclave.are  sewer.are  skills.are  southroad1.are  tahlu.are  (+9 more)
code/: .#magic.c.1.3  .#rift.1.1.1.1  .#thief.c.1.1.1.1  .vimrc  CMakeLists.txt  Makefile  act_comm.c  act_comm.h  act_ente.c  act_ente.h  act_info.c  act_info.h  act_move.c  act_move.h  act_obj.c  act_obj.h  act_wiz.c  act_wiz.h  affect.h  afremstuff.pl  alias.c  alias.h  ap.c  ap.h  aprog.c  aprog.h  area-dump.txt  area.h  ban.c  ban.h  banflags.h  basestr.c  bit.c  bit.h  bitvector.c  bootup.c  bootup.h  cabal.c  cabal.h  cdirectory.c  (+161 more)
code/autogen/: fundefs.h  stddefs.h
code/characterClasses/: ap.c  ap.h  chrono.c  chrono.h  class.c  class.h  druid.c  druid.h  healer.c  healer.h  necro.c  necro.h  paladin.c  paladin.h  sorcerer.c  sorcerer.h  thief.c  thief.h  warrior.c  warrior.h  zealot.c  zealot.h
code/entity/: affect_data.h  area_data.h  char_data.h  exit_data.h  extra_descr.h  fwd.h  limits.h  mob_index_data.h  obj_data.h  obj_index_data.h  pc_data.h  reset_data.h  room_index_data.h  shop_data.h  spec_func.h
code/repositories/: banrepository.c  banrepository.h  bugrepository.c  bugrepository.h  classrepository.c  classrepository.h  graveyardrepository.c  graveyardrepository.h  helprepository.c  helprepository.h  inductionrepository.c  inductionrepository.h  loginrepository.c  loginrepository.h  noterepository.c  noterepository.h  offeringrepository.c  offeringrepository.h  pklogrepository.c  pklogrepository.h  playerrepository.c  playerrepository.h  sitecommentrepository.c  sitecommentrepository.h  sitetrackerrepository.c  sitetrackerrepository.h  theftrepository.c  theftrepository.h  voterepository.c  voterepository.h
code/stdlibs/: basestring.h  bitvector.h  cdirectory.h  cfilesystem.h  clogger.h  dbsession.h  exception.h  file.h  funcptr.h  gmacro.h  linkedlist.h  rift.h  rstring.h  sql.h  strings.h  tstring.h
configs/: login_banner.txt
db/: 00-bootstrap.sql  README.md  install.sh  manifest.txt  rift.sql  rift_core.sql  setup-vagrant.sql  setup.sql
docs/: chrono.txt  ideas.txt  olc.hlp  oldbugs.txt  permdeaths.txt  results.txt
logs/: bugs.txt  mem.dmp  mobdeaths.txt  mobdump.txt  obj.dmp  permdeaths.txt
player/: .gitignore
tests/: CMakeLists.txt  Makefile  README.md  act_obj_tests.c  ban_tests.c  bitflag_tests.c  bug_tests.c  cabal_tests.c  class_tests.c  constant_folding_check.sh  db_mocks.h  db_tests.c  fight_tests.c  graveyard_tests.c  handler_tests.c  help_tests.c  induction_tests.c  login_tests.c  magic_tests.c  main.c  mprog_tests.c  note_tests.c  offering_tests.c  pklog_tests.c  player_tests.c  prof_tests.c  queue_tests.c  sitecomment_tests.c  sitetracker_tests.c  standalone_tests.c  test_helpers.c  test_invariant_fight.c  theft_tests.c  update_tests.c  utility_tests.c  vote_tests.c
tests/smoke/: boot_test.sh
(+527 files in other folders)
